manage/templates/sass/index.scss
@import "_text.scss";
@import "_home.scss";
@import "_crates.scss";
@import "_settings.scss";
@import "_export.scss";

a {
    color: initial;
    &:hover {
        font-weight: bold;
        text-decoration: underline;
    }
    &:visited {
        color: initial;
    }
}

ul {
    list-style: none;
}

h3 {
    padding: 10px 0;
    font-size: 18px;
    text-align: center;
}

.nav {
    list-style: none;
    flex-direction: row;
    display: flex;
    align-self: end;
    padding: 0 10px;
    font-size: 20px;
}

.nav .nav-item {
    padding: 20px;
}

